--- a/tmux.conf
+++ b/tmux.conf
@@ -16,3 +16,8 @@ set -g status-position top
 set -g status-style fg="#ffffff",bg="#000000"
 set -g status-right ""
 set -g window-status-current-style fg=red,bg=black
+
+# preserve current path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
