--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 setw -g mode-keys vi
+
 # move through panes with vim like bindings
 bind h select-pane -L
 bind j select-pane -D
@@ -16,8 +17,14 @@ set -g status-position top
 set -g status-style fg="#ffffff",bg="#000000"
 set -g status-right ""
 set -g window-status-current-style fg=red,bg=black
+# or
+# set -g window-status-current-style fg=red,bg="#000000"
 
 # preserve current path
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# copy to xclip clipboard
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+# bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
