--- a/tmux.conf
+++ b/tmux.conf
@@ -16,9 +16,7 @@ set -g default-terminal "xterm-256color"
 set -g status-position top
 set -g status-style fg="#ffffff",bg="#000000"
 set -g status-right ""
-set -g window-status-current-style fg=red,bg=black
-# or
-# set -g window-status-current-style fg=red,bg="#000000"
+set -g window-status-current-style fg=red,bg="#000000"
 
 # preserve current path
 bind '"' split-window -c "#{pane_current_path}"
