--- a/tmux.conf
+++ b/tmux.conf
@@ -26,3 +26,6 @@ bind c new-window -c "#{pane_current_path}"
 # copy to xclip clipboard
 # bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
 # bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+# disable scroll down after select using mouse
+# unbind -T copy-mode-vi MouseDragEnd1Pane
