--- a/tmux.conf
+++ b/tmux.conf
@@ -29,3 +29,8 @@ bind c new-window -c "#{pane_current_path}"
 
 # disable scroll down after select using mouse
 # unbind -T copy-mode-vi MouseDragEnd1Pane
+
+set-option -g history-limit 10000
+
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
