--- a/tmux.conf
+++ b/tmux.conf
@@ -24,13 +24,8 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # copy to xclip clipboard
-# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
-# bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
-
-# disable scroll down after select using mouse
-# unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -selection clipboard -in"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection clipboard"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
 
 set-option -g history-limit 10000
-
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
